--- a/css/reset.css
+++ b/css/reset.css
@@ -1,10 +1,11 @@
 
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{
+body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td,canvas{
 	margin:0;
 	padding:0;
+	-webkit-box-sizing:border-box;
+	box-sizing: border-box;
 }
 body{
-	background-color: rgb(200,200,200);
 	width: 100%;
 	height: 100%;
 	margin: 0px;
@@ -45,7 +46,11 @@ legend{
 }
 a{
 	line-height: 20px;
+	color:#555;
 	text-decoration: none;
+}
+a:hover{
+	color:#000;
 }
 input{
 	outline:none;
